--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DKS Ambulance Service</title>
+    <title>Dinesh Ambulance Service</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
-        <h1>DKS Ambulance Service - Delhi</h1>
+        <h1>Dinesh Ambulance Service - Delhi</h1>
         <button id="darkToggle">Toggle Dark Mode</button>
         <select id="languageSelect">
             <option value="en">English</option>
